--- a/shopping/Dockerfile
+++ b/shopping/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14
 
-WORKDIR /app/customer
+WORKDIR /app/shopping
 
 COPY package*.json ./
 
@@ -8,6 +8,6 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 8001
+EXPOSE 8003
 
 CMD ["npm", "start"]
