--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.8"
 services:
   nosql-db:
     image: mvertes/alpine-mongo
@@ -16,60 +16,62 @@ services:
 
   products:
     build:
-      dockerfile: Dockerfile
       context: ./products
+      dockerfile: Dockerfile
     container_name: products
     ports:
       - "8002:8002"
     restart: always
     depends_on:
-      - "nosql-db"
-      - "rabbitmq"
+      - nosql-db
+      - rabbitmq
     volumes:
       - .:/app
       - /app/products/node_modules
-
     env_file:
       - ./products/.env.dev
+
   shopping:
     build:
-      dockerfile: Dockerfile
       context: ./shopping
+      dockerfile: Dockerfile
     container_name: shopping
     ports:
       - "8003:8003"
     restart: always
     depends_on:
-      - "nosql-db"
-      - "rabbitmq"
+      - nosql-db
+      - rabbitmq
     volumes:
       - .:/app
       - /app/shopping/node_modules
     env_file:
       - ./shopping/.env.dev
+
   customer:
     build:
-      dockerfile: Dockerfile
       context: ./customer
+      dockerfile: Dockerfile
     container_name: customer
     ports:
       - "8001:8001"
     restart: always
     depends_on:
-      - "nosql-db"
-      - "rabbitmq"
+      - nosql-db
+      - rabbitmq
     volumes:
-      - .:/app/
+      - .:/app
       - /app/customer/node_modules
     env_file:
       - ./customer/.env.dev
+
   nginx-proxy:
     build:
-      dockerfile: Dockerfile
       context: ./proxy
+      dockerfile: Dockerfile
     depends_on:
       - products
       - shopping
       - customer
     ports:
-      - 80:80
+      - "80:80"
