--- a/shopping/Dockerfile
+++ b/shopping/Dockerfile
@@ -1,12 +1,12 @@
-FROM node:18
+FROM node:20-alpine
 
-WORKDIR /app/shopping
+WORKDIR /usr/local/app
 
 COPY package*.json ./
 
-RUN npm install
-
 COPY . .
+
+RUN npm install
 
 EXPOSE 8003
 
