--- a/compose.yaml
+++ b/compose.yaml
@@ -8,17 +8,71 @@ services:
     volumes:
       - ./db/:/data/db
 
+  rabbitmq:
+    image: rabbitmq:alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+
   products:
     build:
       context: ./products
       dockerfile: Dockerfile
     container_name: products
     ports:
-      - "8001:8001"
+      - "8002:8002"
+    restart: always
     depends_on:
       - nosql-db
+      - rabbitmq
     volumes:
       - .:/app
       - /app/products/node_modules
     env_file:
+      - path: ./products/.env
+
+  customer:
+    build:
+      context: ./customer
+      dockerfile: Dockerfile
+    container_name: customer
+    ports:
+      - "8001:8001"
+    restart: always
+    depends_on:
+      - nosql-db
+      - rabbitmq
+    volumes:
+      - .:/app
+      - /app/customer/node_modules
+    env_file:
       - path: ./customer/.env
+
+  shopping:
+    build:
+      context: ./shopping
+      dockerfile: Dockerfile
+    container_name: shopping
+    ports:
+      - "8003:8003"
+    restart: always
+    depends_on:
+      - nosql-db
+      - rabbitmq
+    volumes:
+      - .:/app
+      - /app/shopping/node_modules
+    env_file:
+      - path: ./shopping/.env
+
+  nginx-proxy:
+    build:
+      dockerfile: Dockerfile
+      context: ./proxy
+    depends_on:
+      - products
+      - shopping
+      - customer
+    ports:
+      - 80:80
+      
